--- a/pages/registrations/business-info.html
+++ b/pages/registrations/business-info.html
@@ -12,6 +12,14 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <script src="/js/translate.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -34,7 +42,14 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <a href="#" class="header-elem__btn">Rus</a>
+          <button
+            id="translateButton"
+            data-en="Rus"
+            data-ru="Eng"
+            class="header-elem__btn"
+          >
+            Rus
+          </button>
         </section>
       </div>
     </header>
@@ -44,29 +59,47 @@
           <div class="steps-indic">
             <div class="step inactive">
               <h2>1</h2>
-              <span>Create account</span>
+              <span
+                data-en="Create account"
+                data-ru="
+              Регистрация"
+                >Create account</span
+              >
             </div>
             <div class="line"></div>
             <div class="steps">
               <h2>2</h2>
-              <span>Business information</span>
+              <span data-en="Business information" data-ru="Деловая информация"
+                >Business information</span
+              >
             </div>
             <div class="line"></div>
             <div class="step inactive">
               <h2>3</h2>
-              <span>Application review</span>
+              <span data-en="Application review" data-ru="На рассмотрении"
+                >Application review</span
+              >
             </div>
           </div>
         </section>
-        <section class="create-acc">
+        <form
+          action="/pages/registrations/under-review.html"
+          class="create-acc"
+        >
           <div class="create-acc_box">
-            <h2>Business Information</h2>
+            <h2 data-en="Business Information" data-ru="Деловая информация">
+              Business Information
+            </h2>
 
-            <section class="business-info">
-              <div>
-                <label for="choose">Company legal form</label>
-                <input list="browsers" placeholder="choose" />
-
+            <div>
+              <label
+                data-en="Company legal form"
+                data-ru="Юридическая форма компании"
+                for="choose"
+                >Company legal form</label
+              >
+              <div class="inp">
+                <input required list="browsers" placeholder="choose" />
                 <datalist id="browsers">
                   <option value="Internet Explorer"></option>
                   <option value="Firefox"></option>
@@ -74,64 +107,180 @@
                   <option value="Opera"></option>
                   <option value="Safari"></option>
                 </datalist>
+                <span class="error-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+                </span>
+                <span class="success-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-check"></i>
+                </span>
+                <div class="error"></div>
               </div>
-              <div>
-                <label for="text">Registered Name</label>
-                <input list="text" type="text" placeholder="Enter name" />
+            </div>
+
+            <div>
+              <label
+                data-en="Registered Name"
+                data-ru="Зарегистрированное имя"
+                for="text"
+                >Registered Name</label
+              >
+              <div class="inp">
+                <input
+                  required
+                  list="text"
+                  type="text"
+                  placeholder="Enter name"
+                />
+                <span class="error-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+                </span>
+                <span class="success-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-check"></i>
+                </span>
+                <div class="error"></div>
               </div>
-            </section>
-
-            <div class="other-label">
-              <label for="text">Company registered country</label>
-              <input type="text" placeholder="Country" />
             </div>
 
             <div class="other-label">
-              <label for="text">Company registered address</label>
-              <input type="text" placeholder="Specific address" />
+              <label
+                for="text"
+                data-en="Company registered country"
+                data-ru=" Страна регистрации компании"
+                >Company registered country</label
+              >
+              <div class="inp">
+                <input required type="text" placeholder="Country" />
+                <span class="error-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+                </span>
+                <span class="success-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-check"></i>
+                </span>
+                <div class="error"></div>
+              </div>
             </div>
 
             <div class="other-label">
-              <label for="choose">Field of activity (Can choose many)</label>
-              <input list="browsers" placeholder="choose" />
-
-              <datalist id="browsers">
-                <option value="Internet Explorer"></option>
-                <option value="Firefox"></option>
-                <option value="Google Chrome"></option>
-                <option value="Opera"></option>
-                <option value="Safari"></option>
-              </datalist>
+              <label
+                for="text"
+                data-en="Company registered address"
+                data-ru="Юридический адрес компании"
+                >Company registered address</label
+              >
+              <div class="inp">
+                <input required type="text" placeholder="Specific address" />
+                <span class="error-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+                </span>
+                <span class="success-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-check"></i>
+                </span>
+                <div class="error"></div>
+              </div>
             </div>
 
             <div class="other-label">
-              <label for="text">VAT Registration Number</label>
-              <input type="text" placeholder="0000 0000 0000 0000" />
+              <label
+                for="choose"
+                data-en="Field of activity (Can choose many)"
+                data-ru="
+              Сфера деятельности (Можно выбрать несколько)"
+                >Field of activity (Can choose many)</label
+              >
+              <div class="inp">
+                <input required list="browsers" placeholder="choose" />
+                <datalist id="browsers">
+                  <option value="Internet Explorer"></option>
+                  <option value="Firefox"></option>
+                  <option value="Google Chrome"></option>
+                  <option value="Opera"></option>
+                  <option value="Safari"></option>
+                </datalist>
+                <span class="error-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+                </span>
+                <span class="success-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-check"></i>
+                </span>
+                <div class="error"></div>
+              </div>
             </div>
 
             <div class="other-label">
-              <label for="text">Tax info (ИНН)</label>
-              <input type="text" placeholder="0000 0000 0000 0000" />
+              <label
+                for="text"
+                data-en="VAT Registration Number"
+                data-ru="НДС регистрационный номер"
+                >VAT Registration Number</label
+              >
+              <div class="inp">
+                <input required type="text" placeholder="0000 0000 0000 0000" />
+                <span class="error-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+                </span>
+                <span class="success-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-check"></i>
+                </span>
+                <div class="error"></div>
+              </div>
+            </div>
+
+            <div class="other-label">
+              <label
+                for="text"
+                data-en="Tax info (ИНН)"
+                data-ru="
+              Налоговая информация (ИНН)"
+                >Tax info (ИНН)</label
+              >
+              <div class="inp">
+                <input required type="text" placeholder="0000 0000 0000 0000" />
+                <span class="error-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+                </span>
+                <span class="success-icon hidden">
+                  <i class="fa-sharp fa-solid fa-circle-check"></i>
+                </span>
+                <div class="error"></div>
+              </div>
             </div>
 
             <div class="some-reg">
-              <p>Some Registration Certificate here</p>
+              <p
+                data-en="Some Registration Certificate here"
+                data-ru="Некоторые свидетельства о регистрации здесь"
+              >
+                Some Registration Certificate here
+              </p>
               <span class="file-pick">
                 <input
+                  required
                   type="file"
                   id="docpicker"
                   accept=".pdf,.jpg,.jpeg,.png"
                 />
+                <div class="error"></div>
                 <label for="docpicker" id="file-label"> Add file </label>
-                <span class="label-span"
+                <span
+                  class="label-span"
+                  data-en="File formats: PDF, JPG, JPEG, PNG, 10MB"
+                  data-ru="Форматы файлов: PDF, JPG, JPEG, PNG, 10 МБ."
                   >File formats: PDF, JPG, JPEG, PNG, 10MB</span
                 >
               </span>
             </div>
 
-            <button class="btn-creat-acc" id="create-acc">Submit</button>
+            <button
+              data-en="Submit"
+              data-ru="Представлять на рассмотрение"
+              type="button"
+              class="btn-creat-acc"
+              id="create-acc"
+            >
+              Submit
+            </button>
           </div>
-        </section>
+        </form>
       </main>
     </main>
     <footer>
@@ -140,20 +289,26 @@
         <div class="footer-elements">
           <div>
             <a href="#"
-              ><img src="/images/back-images/White-logo.png" alt="logo" /><img
-                src="/images/back-images/white-text-logo.png"
+              ><img src="/images/back-images/White-logo.svg" alt="logo" /><img
+                src="/images/back-images/white-text-logo.svg"
                 alt="logo"
             /></a>
             <span>
-              <h3>Contact</h3>
+              <h3 data-en="Contact" data-ru="Контакт">Contact</h3>
               <a href="#">someemailhere@mail.com</a>
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
+          <h5
+            data-en="©2023 Best Offer Deal all rights reserved"
+            data-ru="©2023 Best Offer Deal все права защищены"
+          >
+            ©2023 <big>Best Offer Deal</big> all rights reserved
+          </h5>
         </div>
       </div>
     </footer>
+    <script src="/js/business-info.js"></script>
   </body>
 </html>
